# tiny

./: CMakeLists.txt  README.md  azure-pipelines.yml  foonathan_tiny-config.cmake  main.cpp  ops
example/: CMakeLists.txt  custom_tiny_type.cpp  tiny_storage.cpp  tombstone.cpp
include/foonathan/tiny/: aligned_ptr.hpp  bit_field.hpp  bit_view.hpp  check_size.hpp  enum_traits.hpp  optional_impl.hpp  padding_tiny_storage.hpp  padding_traits.hpp  pointer_tiny_storage.hpp  pointer_variant_impl.hpp  spare_bits.hpp  tagged_union_impl.hpp  tiny_bool.hpp  tiny_enum.hpp  tiny_flag_set.hpp  tiny_int.hpp  tiny_pair.hpp  tiny_pointer_storage.hpp  tiny_storage.hpp  tiny_type.hpp  tiny_type_storage.hpp  tombstone.hpp
include/foonathan/tiny/detail/: assert.hpp  ilog2.hpp  index_sequence.hpp  select_integer.hpp
test/: CMakeLists.txt  aligned_ptr.cpp  bit_field.cpp  bit_view.cpp  check_size.cpp  optional_impl.cpp  padding_tiny_storage.cpp  padding_traits.cpp  poiner_variant_impl.cpp  pointer_tiny_storage.cpp  spare_bits_traits.cpp  tagged_union_impl.cpp  tiny_pair.cpp  tiny_pointer_storage.cpp  tiny_storage.cpp  tiny_type.cpp  tiny_type_storage.cpp  tiny_types.cpp  tombstone_traits.cpp
test/detail/: ilog2.cpp
